# efficient-linear-assignment

./: .gitignore  CMakeLists.txt  README.md  architecture.md  architecture_optimization_plan.md  benchmark_suite.py  debug_cuda.py  optimization_plan.md  plot_benchmarks.py  pyproject.toml  setup.py  verify_correctness.py
guides/: GPU Auction Algorithm for Differentiable Assignment.md  Linear Assignment Algorithms for Deep Learning.md  PyTorch 2.10 Extension Authoring Guide.md
src/csrc/: CMakeLists.txt  auction_cutlass.cu  common.cuh  dual_ascent.cu  dual_ascent_cutlass.cu  interface.cpp  kernels.cu  sinkhorn.cu  sinkhorn_cutlass.cu
src/efficient_linear_assignment/: __init__.py  api.py  backend_cpp.py  backend_torch.py  compiled.py  utils.py
src/efficient_linear_assignment/auction/: __init__.py  api.py  cpp_backend.py  cutile_backend.py  triton_backend.py
src/efficient_linear_assignment/dual_ascent/: __init__.py  api.py  cuda_backend.py  torch_backend.py  triton_backend.py
src/efficient_linear_assignment/routing/: __init__.py  api.py  cuda_backend.py  torch_backend.py  triton_backend.py
src/efficient_linear_assignment/sinkhorn/: __init__.py  api.py  cuda_backend.py  torch_backend.py  triton_backend.py
tests/: test_algos.py  test_all.py  test_compile.py  test_robustness.py
