[build-system]
requires = ["scikit-build-core", "pybind11", "torch"]
build-backend = "scikit_build_core.build"

[project]
name = "efficient_linear_assignment"
version = "0.1.0"
description = "Differentiable Linear Assignment with multiple backends (Torch, Triton, C++, CuTile)"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "numpy",
    "scipy",
    "triton"
]

[tool.scikit-build]
cmake.version = ">=3.20"
sdist.include = ["src/csrc/*"]
wheel.packages = ["src/efficient_linear_assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
